--- a/_posts/paper_summaries/2016-03-04-AlphaGo.markdown
+++ b/_posts/paper_summaries/2016-03-04-AlphaGo.markdown
@@ -2,6 +2,7 @@
 layout: post
 title: Mastering the Game of Go with Deep Neural Networks and Tree Search
 date: 2016-03-04 9:00 AM
+category: paper_summaries
 ---
 [Silver, et al. 2016](http://www.willamette.edu/~levenick/cs448/goNature.pdf)
 
