--- a/_posts/paper_summaries/2016-07-30-ResNets.markdown
+++ b/_posts/paper_summaries/2016-07-30-ResNets.markdown
@@ -2,6 +2,7 @@
 layout: post
 title: "Deep Residual Learning for Image Recognition"
 date: 2016-07-30
+category: paper_summaries
 ---
 [He, et al. 2015](https://arxiv.org/pdf/1512.03385v1.pdf)
 
