COSMETIC_FIXES: minor fixes to my blog post

--- a/_posts/blog_posts/2016-08-17-ddpg-rl.md
+++ b/_posts/blog_posts/2016-08-17-ddpg-rl.md
@@ -17,7 +17,7 @@ MathJax.Hub.Config({
 </script>
 
 ---
-<center><i>DISCLAIMER: readers should have a familiarity with basic reinforcement learning concepts and neural networks (e.g., MDPs, policy and value functions, Q-learning, Bellman Equation)</i></center>
+<center><i>DISCLAIMER: Readers should have a familiarity with basic reinforcement learning concepts and neural networks (e.g., MDPs, policy and value functions, Q-learning, Bellman Equation)</i></center>
 
 
 ## Introduction
@@ -253,6 +253,7 @@ self.update_target_network_params = \
 The code looks a bit convoluted, but it's actually really clever. You're defining an Op, ```update_target_network_params```, that will copy the parameters of the online network with a mixing factor $\tau$. Make sure you're copying over the correct Tensorflow variables by checking what is being returned by ```tf.trainable_variables()```. You'll need to define this Op for both the actor and critic networks. 
 
 Let's define the gradient computation and optimization Tensorflow operations. 
+We'll use [ADAM](https://arxiv.org/abs/1412.6980) as our optimization method. It's sort of become a de-facto standard, in place of SGD.
 
 For the actor network...
 
@@ -400,7 +401,7 @@ with tf.Session() as sess:
 
 {% endhighlight %}
 
-You'll want to add book-keeping to the code and arrange things a little more neatly- you can see the full code at: https://gist.github.com/pemami4911/27a6b38a8a161adeaca0cc7ec1363480.
+You'll want to add book-keeping to the code and arrange things a little more neatly- you can see the full code [here](https://gist.github.com/pemami4911/27a6b38a8a161adeaca0cc7ec1363480).
 
 I used Tensorboard to view the total reward per episode and average max Q.
 Tensorflow is a bit low-level, so it's definitely recommended to use tools like tflearn, keras, Tensorboard, etc., on top of it. I am quite pleased with it though; it's no surprise that TF got so popular so fast. 
@@ -413,9 +414,9 @@ Tensorflow is a bit low-level, so it's definitely recommended to use tools like 
     caption="Results from running the code on Pendulum-v0"
 %}
 
-Despite running DDPG on the CPU of my Macbook Air, it converged relatively quickly to a good solution. Some ways to potentially see better performance:
+Despite running this code on the courageous CPU of my Macbook Air, it converged relatively quickly to a good solution. Some ways to potentially see better performance:
 
-1. Use a priority algorithm for sampling from the replay buffer instead of uniformly sampling. See my summary of [http://pemami4911.github.io/paper_summaries/2016/01/26/prioritizing-experience-replay.html].
+1. Use a priority algorithm for sampling from the replay buffer instead of uniformly sampling. See my summary [here](http://pemami4911.github.io/paper_summaries/2016/01/26/prioritizing-experience-replay.html).
 
 2. Experiment with different stochastic policies to improve exploration. 
 
