BLOG_DRAFT_2: Draft #2

--- a/_posts/blog_posts/2016-08-21-ddpg-rl.md
+++ b/_posts/blog_posts/2016-08-21-ddpg-rl.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Breaking Down Deep Deterministic Policy Gradients in TensorFlow"
-date:   2016-08-17
+date:   2016-08-21
 category: blog_posts
 ---
 
@@ -17,12 +17,20 @@ MathJax.Hub.Config({
 </script>
 
 ---
-<center><i>DISCLAIMER: Readers should have a familiarity with basic reinforcement learning concepts and neural networks (e.g., MDPs, policy and value functions, Q-learning, Bellman Equation)</i></center>
+<center><i>DISCLAIMER: Readers should have a familiarity with basic reinforcement learning concepts (e.g., MDPs, policy and value functions, Q-learning, Bellman Equation) and with training and evaluating a neural network.</i></center>
 
 
 ## Introduction
 
-Deep Reinforcement Learning has recently gained a lot of traction in the machine learning community due to the significant amount of progress that has been made in the past few years. Traditionally, reinforcement learning algorithms were constrained to tiny, discretized grid worlds, which seriously inhibited them from gaining credibility as being viable machine learning tools. The state and action spaces had to be kept small to avoid the _curse_ _of_ _dimensionality_. After Deep Q-Networks <a href="#References">[4]</a> became a hit, people realized that deep learning methods could be used to finally solve high-dimensional RL problems. One of the subsequent challenges that the RL community faced was figuring out how to deal with continuous action spaces. This is a **big deal**, since most interesting problems in robotic control, etc., fall in this category; [OpenAI Gym](https://gym.openai.com) is a fantastic tool for training and evaluating such reinforcement learning tasks in simulation. Logically, if you discretize your continuous action space too finely, you end up with the same curse of dimensionality as before. On the other hand, a naive descritization of the action space throws away valuable information concerning the geometry of the action domain.
+Deep Reinforcement Learning has recently gained a lot of traction in the machine learning community due to the significant amount of progress that has been made in the past few years. Traditionally, reinforcement learning algorithms were constrained to tiny, discretized grid worlds, which seriously inhibited them from gaining credibility as being viable machine learning tools.
+
+{%
+    include image.html
+    img="/assets/classic_rl.jpg"
+    caption="Cliff-walking task, Fig. 6.13 from [6]"
+%}
+
+ The state and action spaces had to be kept small to avoid the _curse_ _of_ _dimensionality_. After Deep Q-Networks <a href="#References">[4]</a> became a hit, people realized that deep learning methods could be used to solve high-dimensional problems that were previously out of reach. One of the subsequent challenges that the reinforcement learning community faced was figuring out how to deal with continuous action spaces. This is a significant obstacle, since most interesting problems in robotic control, etc., fall into this category. Logically, if you discretize your continuous action space too finely, you end up with the same curse of dimensionality as before. On the other hand, a naive discretization of the action space throws away valuable information concerning the geometry of the action domain.
 
 {%
     include image.html
@@ -30,43 +38,43 @@ Deep Reinforcement Learning has recently gained a lot of traction in the machine
     caption="CartPole-v0 environment: OpenAI Gym"
 %}
 
-Google DeepMind has devised a solid approach to tackling this problem. Building off the prior work of <a href="#References">[3]</a> on Deterministic Policy Gradients, they have produced an **actor-critic** algorithm called Deep Deterministic Policy Gradients (DDPG) <a href="#References">[5]</a> that is **off-policy** and **model-free**, which can learn quite efficiently on problems with continuous action spaces. It uses some of the deep learning tricks that were introduced with Deep Q-Networks (hence the "Deep"-ness of DDPG). Lets break down some of the jargon that was just mentioned...
+Google DeepMind has devised a solid algorithm for tackling the continuous action space problem. Building off the prior work of <a href="#References">[3]</a> on Deterministic Policy Gradients, they have produced an **actor-critic** algorithm called Deep Deterministic Policy Gradients (DDPG) <a href="#References">[5]</a> that is **off-policy** and **model-free**, and that uses some of the deep learning tricks that were introduced along with Deep Q-Networks (hence the "deep"-ness of DDPG). We're going to implement this algorithm using Tensorflow and tflearn, and then evaluate it with [OpenAI Gym](https://gym.openai.com) on the inverted pendulum environment. Lets first examine some of the reinforcement learning terminology that was just mentioned.
 
-## First, Some Theory
+## Lets Start With Some Theory
 
-<a href="#Tensorflow">[I just want to skip to the Tensorflow part]</a>
+<a href="#Tensorflow">[Wait, I just want to skip to the Tensorflow part]</a>
 
 ### Actor-Critic
 
 {%
     include image.html
     img="/assets/actor-critic.png"
-    caption="The actor-critic architecture [2]" 
+    caption="The actor-critic architecture, Fig. 6.15 from [2]" 
 %}
 
-The Actor-Critic learning algorithm is used to represent the policy function independently of the value function. The policy function structure is known as the _actor_, and the value function structure is referred to as the _critic_. The actor produces an action given the current state of the system, and the critic produces a TD (Temporal-Difference) error signal given the state and the action. Therefore, the output of the critic drives learning in both the actor and the critic. In Deep Reinforcement Learning, neural networks can be used to represent the actor and the critic. 
+The Actor-Critic learning algorithm is used to represent the policy function independently of the value function. The policy function structure is known as the _actor_, and the value function structure is referred to as the _critic_. The actor produces an action given the current state of the environment, and the critic produces a TD (Temporal-Difference) error signal given the state and resultant reward. If the critic is estimating the action-value function $Q(s,a)$, it will also need the output of the actor.  The output of the critic drives learning in both the actor and the critic. In Deep Reinforcement Learning, neural networks can be used to represent the actor and critic structures. 
 
 ### Off-Policy
 
-Reinforcement Learning algorithms which are characterized as off-policy generally employ a separate behavior policy that is independent of the policy that is evaluated and improved upon in order to simulate sample trajectories. A key benefit of this separation is that the behavior policy can operate by sampling all actions, whereas the estimation policy can be deterministic (e.g., greedy) <a href="#References">[1]</a>. Q-learning is an off-policy algorithm, since it updates the Q values without making any assumptions about the actual policy being followed. Rather, the Q-learning algorithm simply states that the Q-value corresponding to state $s(t)$ and action $a(t)$ is updated using the Q-value of the next state $s(t + 1)$ and the action $a(t + 1)$ that maximizes the Q-value at state $s(t + 1)$. 
+Reinforcement Learning algorithms which are characterized as off-policy generally employ a separate behavior policy that is independent of the policy being improved upon; the behavior policy is used to simulate sample trajectories. A key benefit of this separation is that the behavior policy can operate by sampling all actions, whereas the estimation policy can be deterministic (e.g., greedy) <a href="#References">[1]</a>. Q-learning is an off-policy algorithm, since it updates the Q values without making any assumptions about the actual policy being followed. Rather, the Q-learning algorithm simply states that the Q-value corresponding to state $s(t)$ and action $a(t)$ is updated using the Q-value of the next state $s(t + 1)$ and the action $a(t + 1)$ that maximizes the Q-value at state $s(t + 1)$. 
 
 On-policy algorithms directly use the policy that is being estimated to sample trajectories during training. 
 
 ### Model-free
 
-Model-free RL algorithms are simply those that make no effort at learning the underlying dynamics that govern how an agent interacts with the environment. In the case where the environment has a discrete state space and the agent has a discrete number of actions to choose from, the model would be the transition matrix: $T(s(t + 1)\|s(t), a(t))$. This stochastic matrix gives all of the probabilities for arriving at a desired state given the current state and action. Clearly, for problems with high-dimensional state and action spaces, this matrix is incredibly expensive in space and time to compute. If your state space is the set of all possible 64 x 64 RGB images and your agent has 18 actions available to it, the transition matrix's size is  $\|S \times S \times A\| \approx \|(68.7 \times 10^{9}) \times (68.7 \times 10^9) \times 18\|$, and at 32 bits per matrix element, thats around $3.4 \times 10^{14}$ GB to store it in RAM! 
+Model-free RL algorithms are those that make no effort to learn the underlying dynamics that govern how an agent interacts with the environment. In the case where the environment has a discrete state space and the agent has a discrete number of actions to choose from, the model of the environment is the 1-step transition matrix: $T(s(t + 1)\|s(t), a(t))$. This stochastic matrix gives all of the probabilities for arriving at a desired state given the current state and action. Clearly, for problems with high-dimensional state and action spaces, this matrix is incredibly expensive in space and time to compute. If your state space is the set of all possible 64 x 64 RGB images and your agent has 18 actions available to it, the transition matrix's size is  $\|S \times S \times A\| \approx \|(68.7 \times 10^{9}) \times (68.7 \times 10^9) \times 18\|$, and at 32 bits per matrix element, thats around $3.4 \times 10^{14}$ GB to store it in RAM! 
 
-Rather than dealing with that, model-free algorithms directly estimate the optimal policy or value function through algorithms such as policy iteration or value iteration and (as of late) with function approximators. This is much more efficient computation-wise! However, I should note that, if possible, obtaining and using a good approximation of the underlying model of the system can only be beneficial. Be wary- using a bad approximation of the model of the system will only bring misery. Not using a model means that you need a large number of training examples.
+Rather than dealing with all of that, model-free algorithms directly estimate the optimal policy or value function through algorithms such as policy iteration or value iteration. This is much more computationally efficient. However, I should note that, if possible, obtaining and using a good approximation of the underlying model of the environment can only be beneficial. Be wary- using a bad approximation of a model of the environment will only bring misery. On the other hand, model-free methods require a larger number of training examples.
 
 ## The Meat and Potatoes of DDPG
 
-At its core, DDPG uses a stochastic behavior policy for good exploration but estimates a **deterministic** target policy, which is much easier to learn. This allows for the use of the Deterministic Policy Gradient theorem (which will be derived shortly). DDPG uses two main neural networks, one for the actor and one for the critic, to compute action predictions for the current state and to generate a temporal-difference (TD) error signal. The input of the actor network is the current state, and the output is a single real value representing an action chosen from a **continuous** space (whoa!). The critic's output is simply the estimated Q-value of the current state and of the action given by the actor. The deterministic policy gradient theorem provides the update rule for the weights of the actor network. The critic network is updated from the gradients obtained from the TD error signal. 
+At its core, DDPG is a policy gradient algorithm that uses a stochastic behavior policy for good exploration but estimates a **deterministic** target policy, which is much easier to learn. Policy gradient algorithms utilize a form of policy iteration in a sense: they evaluate the policy, and then follow the policy gradient to maximize performance. Since DDPG is off-policy and uses a deterministic target policy, this allows for the use of the Deterministic Policy Gradient theorem (which will be derived shortly). DDPG is an actor-critic algorithm as well; it primarily uses two neural networks, one for the actor and one for the critic. These networks compute action predictions for the current state and generate a temporal-difference (TD) error signal each time step. The input of the actor network is the current state, and the output is a single real value representing an action chosen from a **continuous** action space (whoa!). The critic's output is simply the estimated Q-value of the current state and of the action given by the actor. The deterministic policy gradient theorem provides the update rule for the weights of the actor network. The critic network is updated from the gradients obtained from the TD error signal. 
 
-Sadly, it turns out that a vanilla actor-critic algorithm that is off-policy and model-free tends to behave poorly, resisting all of the most valient efforts to get it to converge. The following are most likely some of the key conspirators: 
+Sadly, it turns out that a vanilla actor-critic algorithm that is off-policy and model-free tends to behave poorly, resisting all of the most valiant efforts to get it to converge. The following are most likely some of the key conspirators: 
 
-1. In general, training and evaluating your policy and/or value function with thousands of temporally-correlated simulated trajectories leads to the introduction of enormous amounts of variance in your approximation. The TD error signal is excellent at compounding the variance introduced by your bad predictions over time. It is highly suggested to use a replay buffer of randomly sampled transitions to break up the temporal correlation between training episodes; this is known as **experience replay**. DDPG employs this technique. 
+1. In general, training and evaluating your policy and/or value function with thousands of temporally-correlated simulated trajectories leads to the introduction of enormous amounts of variance in your approximation of the true Q-function. The TD error signal is excellent at compounding the variance introduced by your bad predictions over time. It is highly suggested to use a replay buffer to store the **experiences** of the agent during training, and then randomly sample transitions to use for learning in order to break up the temporal correlation between training episodes. This technique is known as **experience replay**. DDPG uses this. 
 
-2. Directly updating your actor and critic neural network weights with the gradients obtained from a TD error signal that was computed from your replay buffer and the output of the actor and critic networks causes your learning algorithm to diverge (or to not learn at all). It was recently discovered that using a set of **target networks** to generate the **targets** for your TD error computation regularizes your learning algorithm and increases the stability. Accordingly:
+2. Directly updating your actor and critic neural network weights with the gradients obtained from a TD error signal that was computed from your replay buffer and the output of the actor and critic networks causes your learning algorithm to diverge (or to not learn at all). It was recently discovered that using a set of **target networks** to generate the **targets** for your TD error computation regularizes your learning algorithm and increases stability. Accordingly:
 
 $$
 \begin{equation}
@@ -82,9 +90,9 @@ $$
 
 Here, a minibatch of size $N$ has been sampled from the replay buffer, with the $i$ index referring to the i'th sample.  The target for the TD error computation, $y_i$, is computed from the immediate reward and the target actor and critic networks, with weights $\theta^{\mu'}$ and $\theta^{Q'}$ respectively. Then, the critic loss can be computed w.r.t. the output of the critic network for the i'th sample, which is $Q(s_i, a_i \| \theta^{Q})$. 
 
-See <a href="#References">[4]</a> for more details on target networks.
+See <a href="#References">[4]</a> for more details on the use of target networks.
 
-Now, as mentioned above, the weights of the critic neural network can be updated with the gradients derived from the loss function (2). And, remember, the actor network is updated with the Deterministic Policy Gradient. Here lies the crux of Deep Determinstic Policy Gradients! Silver, et al., <a href="#References">[3]</a> proved that the _policy gradient_, which is the gradient of the policy's performance, is equivalent to the deterministic policy gradient: 
+Now, as mentioned above, the weights of the critic neural network can be updated with the gradients derived from the loss function (2). And, remember, the actor network is updated with the Deterministic Policy Gradient. Here lies the crux of DDPG! Silver, et al., <a href="#References">[3]</a> proved that the _policy gradient_, which is the gradient of the policy's performance, is equivalent to the deterministic policy gradient: 
 
 $$
 \begin{equation}
@@ -93,7 +101,9 @@ $$
 \end{equation}
 $$ 
 
-**If you would like to move on to the code, feel free to <a href="#Tensorflow">skip ahead</a> here.** Since I think the proof of the deterministic policy gradient theorem is quite nice, I'd like to demonstrate it here before moving on to the code.
+It turns out that all you need is the gradient of the output of the critic network w.r.t. its parameters, multiplied by the gradient of the output of the actor network w.r.t. its parameters, averaged over a minibatch. Simple!
+
+**If you would like to move on to the code, feel free to <a href="#Tensorflow">skip ahead</a> here.** Since I think the proof of the deterministic policy gradient theorem is quite illuminating, I'd like to demonstrate it here before moving on to the code.
 
 <div class="theorem">
 (Deterministic Policy Gradient Theorem). 
@@ -133,14 +143,15 @@ $$
 $$
 </div>
 
-In <a href="#References">[3]</a>, it is shown that the stochastic policy gradient converges to Eq. 4 in the limit as the variance of the stochastic policy gradient approaches 0. This is significant because it allows all of the machinery for stochastic policy gradients to be applied to the deterministic policy gradients. I don't talk about the stochastic policy gradient theorem in this post for the sake of brevity, but it is covered in <a href="#References">[3]</a>. 
+The right-hand side of Eq. 6 is exactly what we want. In <a href="#References">[3]</a>, it is shown that the stochastic policy gradient converges to Eq. 4 in the limit as the variance of the stochastic policy gradient approaches 0. This is significant because it allows all of the machinery for stochastic policy gradients to be applied to deterministic policy gradients. I don't talk about the stochastic policy gradient theorem in this post for the sake of brevity, but it is covered in <a href="#References">[3]</a>. 
 
-## Enough with the chit chat, let's see some code!
 <a name="Tensorflow"></a> 
+
+## Enough With The Chit Chat, Let's See Some Code!
 
 Let's get started. 
 
-The first part is easy. Set up a data structure to represent your replay buffer. I recommend using a deque from python's collections lib. The replay buffer will return a randomly chosen batch of experiences when queried.
+The first part is easy. Set up a data structure to represent your replay buffer. I recommend using a deque from python's collections library. The replay buffer will return a randomly chosen batch of experiences when queried.
 
 {% highlight python %}
 from collections import deque
@@ -229,13 +240,13 @@ def create_critic_network(self):
 
 {% endhighlight %}
 
-I would suggest placing these two functions in separate Actor and Critic classes. For the actor network, the output is a tanh layer scaled to be between $[-b, +b], b \in \mathbb{R}$. This is useful when your action space is bounded and closed. 
+I would suggest placing these two functions in separate Actor and Critic classes. The details for each network are in the appendix of the DDPG paper <a href=#References>[5]</a>. They're pretty simple, though. For the actor network, the output is a tanh layer scaled to be between $[-b, +b], b \in \mathbb{R}$. This is useful when your action space is on the real line but is bounded and closed, as is the case for the pendulum task. 
 
-Notice that the critic network takes both the state and the action as inputs; however, the action input skips the first layer. This is a design decision that has experimentally worked well.
+Notice that the critic network takes both the state and the action as inputs; however, the action input skips the first layer. This is a design decision that has experimentally worked well. Accommodating this with tflearn was a bit tricky.
 
-Use Tensorflow placeholders, created by ```tflean.input_data```, for the inputs. Leaving the first dimension of the placeholders as ```None``` allows you to train on batches of experiences.
+Make sure to use Tensorflow placeholders, created by ```tflean.input_data```, for the inputs. Leaving the first dimension of the placeholders as ```None``` allows you to train on batches of experiences.
 
-You can simply call these methods twice, once to create the actor and critic networks to train, and again to create your target actor and critic networks. 
+You can simply call these creation methods twice, once to create the actor and critic networks that will be used for training, and again to create your target actor and critic networks. 
 
 You can create a Tensorflow Op to update the target network parameters like so: 
 {% highlight python %}
@@ -250,10 +261,10 @@ self.update_target_network_params = \
 
 {% endhighlight %}
 
-The code looks a bit convoluted, but it's actually really clever. You're defining an Op, ```update_target_network_params```, that will copy the parameters of the online network with a mixing factor $\tau$. Make sure you're copying over the correct Tensorflow variables by checking what is being returned by ```tf.trainable_variables()```. You'll need to define this Op for both the actor and critic networks. 
+This looks a bit convoluted, but it's actually a great display of Tensorflow's flexibility. You're defining a Tensorflow Op, ```update_target_network_params```, that will copy the parameters of the online network with a mixing factor $\tau$. Make sure you're copying over the correct Tensorflow variables by checking what is being returned by ```tf.trainable_variables()```. You'll need to define this Op for both the actor and critic networks. 
 
 Let's define the gradient computation and optimization Tensorflow operations. 
-We'll use [ADAM](https://arxiv.org/abs/1412.6980) as our optimization method. It's sort of become a de-facto standard, in place of SGD.
+We'll use [ADAM](https://arxiv.org/abs/1412.6980) as our optimization method. It's sort of become a de-facto standard instead of SGD, now that it's implemented in plug-n-play deep-learning libraries such as tflearn and keras.
 
 For the actor network...
 
@@ -292,7 +303,7 @@ self.action_grads = tf.gradients(self.out, self.action)
 
 This is exactly Eq. 2. Make sure to grab the action gradients at the end there to pass to the policy network for gradient computation. 
 
-I like to encapsulate the calls to my Tensorflow session to keep things clean. For brevity's sake, I'll just show the ones for the actor network.
+I like to encapsulate calls to my Tensorflow session to keep things organized and readable in my training code. For brevity's sake, I'll just show the ones for the actor network.
 
 {% highlight python %}
 
@@ -404,7 +415,7 @@ with tf.Session() as sess:
 You'll want to add book-keeping to the code and arrange things a little more neatly- you can see the full code [here](https://gist.github.com/pemami4911/27a6b38a8a161adeaca0cc7ec1363480).
 
 I used Tensorboard to view the total reward per episode and average max Q.
-Tensorflow is a bit low-level, so it's definitely recommended to use tools like tflearn, keras, Tensorboard, etc., on top of it. I am quite pleased with it though; it's no surprise that TF got so popular so fast. 
+Tensorflow is a bit low-level, so it's definitely recommended to use tools like tflearn, keras, Tensorboard, etc., on top of it. I am quite pleased with TF though; it's no surprise that it got so popular so quickly. 
 
 ## Looking Forward
 
@@ -414,22 +425,24 @@ Tensorflow is a bit low-level, so it's definitely recommended to use tools like 
     caption="Results from running the code on Pendulum-v0"
 %}
 
-Despite running this code on the courageous CPU of my Macbook Air, it converged relatively quickly to a good solution. Some ways to potentially see better performance:
+Despite the fact that I ran this code on the courageous CPU of my Macbook Air, it converged relatively quickly to a good solution. Some ways to potentially see better performance (besides running the code on a GPU lol):
 
-1. Use a priority algorithm for sampling from the replay buffer instead of uniformly sampling. See my summary [here](http://pemami4911.github.io/paper_summaries/2016/01/26/prioritizing-experience-replay.html).
+1. Use a priority algorithm for sampling from the replay buffer instead of uniformly sampling. See my summary of [Prioritized Experience Replay](http://pemami4911.github.io/paper_summaries/2016/01/26/prioritizing-experience-replay.html).
 
 2. Experiment with different stochastic policies to improve exploration. 
 
-3. Use recurrent networks to capture temporal nuances of the problem domain. 
+3. Use recurrent networks to capture temporal nuances within the environment. 
 
 In [5], they also used convolutional neural networks to tackle problems with higher-dimensional state spaces. They were able to learn good policies on challenging control tasks with just pixel inputs.  
 
-## References 
 <a name="References"></a>
 
+## References 
+
 1. Sutton, Richard S., and Andrew G. Barto. [Reinforcement learning: An introduction](https://webdocs.cs.ualberta.ca/~sutton/book/ebook/the-book.html).
-2. [Reinforcement learning: An introduction - Fig 6.15](https://webdocs.cs.ualberta.ca/~sutton/book/ebook/figtmp34.png)
+2. [Reinforcement learning: An introduction - Fig 6.15](https://webdocs.cs.ualberta.ca/~sutton/book/ebook/node66.html)
 3. Silver, et al. [Deterministic Policy Gradients](http://jmlr.org/proceedings/papers/v32/silver14.pdf)
 4. Mnih, et al. [Human-level control through deep reinforcement learning](http://www.nature.com/nature/journal/v518/n7540/full/nature14236.html)
 5. Lillicrap, et al. [Continuous control with Deep Reinforcement Learning](http://arxiv.org/pdf/1509.02971v2.pdf)
+6. [Reinforcement learning: An introduction - Fig 6.13](https://webdocs.cs.ualberta.ca/~sutton/book/ebook/node65.html)
 
