--- a/_posts/blog_posts/2016-08-21-ddpg-rl.md
+++ b/_posts/blog_posts/2016-08-21-ddpg-rl.md
@@ -17,8 +17,6 @@ MathJax.Hub.Config({
 </script>
 
 ---
-<center><i>DISCLAIMER: Readers should have a familiarity with basic reinforcement learning concepts (e.g., MDPs, policy and value functions, Q-learning, Bellman Equation) and with training and evaluating a neural network.</i></center>
-
 
 ## Introduction
 
@@ -30,7 +28,7 @@ Deep Reinforcement Learning has recently gained a lot of traction in the machine
     caption="Cliff-walking task, Fig. 6.13 from [6]"
 %}
 
- The state and action spaces had to be kept small to avoid the _curse_ _of_ _dimensionality_. After Deep Q-Networks <a href="#References">[4]</a> became a hit, people realized that deep learning methods could be used to solve high-dimensional problems that were previously out of reach. One of the subsequent challenges that the reinforcement learning community faced was figuring out how to deal with continuous action spaces. This is a significant obstacle, since most interesting problems in robotic control, etc., fall into this category. Logically, if you discretize your continuous action space too finely, you end up with the same curse of dimensionality as before. On the other hand, a naive discretization of the action space throws away valuable information concerning the geometry of the action domain.
+ After Deep Q-Networks <a href="#References">[4]</a> became a hit, people realized that deep learning methods could be used to solve high-dimensional problems. One of the subsequent challenges that the reinforcement learning community faced was figuring out how to deal with continuous action spaces. This is a significant obstacle, **since most interesting problems in robotic control, etc., fall into this category**. Logically, if you discretize your continuous action space too finely, you end up with the same curse of dimensionality problem as before. On the other hand, a naive discretization of the action space throws away valuable information concerning the geometry of the action domain.
 
 {%
     include image.html
@@ -38,7 +36,7 @@ Deep Reinforcement Learning has recently gained a lot of traction in the machine
     caption="CartPole-v0 environment: OpenAI Gym"
 %}
 
-Google DeepMind has devised a solid algorithm for tackling the continuous action space problem. Building off the prior work of <a href="#References">[3]</a> on Deterministic Policy Gradients, they have produced an **actor-critic** algorithm called Deep Deterministic Policy Gradients (DDPG) <a href="#References">[5]</a> that is **off-policy** and **model-free**, and that uses some of the deep learning tricks that were introduced along with Deep Q-Networks (hence the "deep"-ness of DDPG). We're going to implement this algorithm using Tensorflow and tflearn, and then evaluate it with [OpenAI Gym](https://gym.openai.com) on the inverted pendulum environment. Lets first examine some of the reinforcement learning terminology that was just mentioned.
+Google DeepMind has devised a solid algorithm for tackling the continuous action space problem. Building off the prior work of <a href="#References">[3]</a> on Deterministic Policy Gradients, they have produced an **actor-critic** algorithm called Deep Deterministic Policy Gradients (DDPG) <a href="#References">[5]</a> that is **off-policy** and **model-free**, and that uses some of the deep learning tricks that were introduced along with Deep Q-Networks (hence the "deep"-ness of DDPG). In this blog post, we're going to discuss how to implement this algorithm using Tensorflow and tflearn, and then evaluate it with [OpenAI Gym](https://gym.openai.com) on the pendulum environment. Lets first examine some of the reinforcement learning terminology that was just mentioned to give those who are unfamiliar with DDPG some background.
 
 ## Lets Start With Some Theory
 
@@ -56,25 +54,25 @@ The Actor-Critic learning algorithm is used to represent the policy function ind
 
 ### Off-Policy
 
-Reinforcement Learning algorithms which are characterized as off-policy generally employ a separate behavior policy that is independent of the policy being improved upon; the behavior policy is used to simulate sample trajectories. A key benefit of this separation is that the behavior policy can operate by sampling all actions, whereas the estimation policy can be deterministic (e.g., greedy) <a href="#References">[1]</a>. Q-learning is an off-policy algorithm, since it updates the Q values without making any assumptions about the actual policy being followed. Rather, the Q-learning algorithm simply states that the Q-value corresponding to state $s(t)$ and action $a(t)$ is updated using the Q-value of the next state $s(t + 1)$ and the action $a(t + 1)$ that maximizes the Q-value at state $s(t + 1)$. 
+Reinforcement Learning algorithms which are characterized as off-policy generally employ a separate behavior policy that is independent of the policy being improved upon; the behavior policy is used to simulate trajectories. A key benefit of this separation is that the behavior policy can operate by sampling all actions, whereas the estimation policy can be deterministic (e.g., greedy) <a href="#References">[1]</a>. Q-learning is an off-policy algorithm, since it updates the Q values without making any assumptions about the actual policy being followed. Rather, the Q-learning algorithm simply states that the Q-value corresponding to state $s(t)$ and action $a(t)$ is updated using the Q-value of the next state $s(t + 1)$ and the action $a(t + 1)$ that maximizes the Q-value at state $s(t + 1)$. 
 
 On-policy algorithms directly use the policy that is being estimated to sample trajectories during training. 
 
 ### Model-free
 
-Model-free RL algorithms are those that make no effort to learn the underlying dynamics that govern how an agent interacts with the environment. In the case where the environment has a discrete state space and the agent has a discrete number of actions to choose from, the model of the environment is the 1-step transition matrix: $T(s(t + 1)\|s(t), a(t))$. This stochastic matrix gives all of the probabilities for arriving at a desired state given the current state and action. Clearly, for problems with high-dimensional state and action spaces, this matrix is incredibly expensive in space and time to compute. If your state space is the set of all possible 64 x 64 RGB images and your agent has 18 actions available to it, the transition matrix's size is  $\|S \times S \times A\| \approx \|(68.7 \times 10^{9}) \times (68.7 \times 10^9) \times 18\|$, and at 32 bits per matrix element, thats around $3.4 \times 10^{14}$ GB to store it in RAM! 
+Model-free RL algorithms are those that make no effort to learn the underlying dynamics that govern how an agent interacts with the environment. In the case where the environment has a discrete state space and the agent has a discrete number of actions to choose from, a model of the dynamics of the environment is the 1-step transition matrix: $T(s(t + 1)\|s(t), a(t))$. This stochastic matrix gives all of the probabilities for arriving at a desired state given the current state and action. Clearly, for problems with high-dimensional state and action spaces, this matrix is incredibly expensive in space and time to compute. If your state space is the set of all possible 64 x 64 RGB images and your agent has 18 actions available to it, the transition matrix's size is  $\|S \times S \times A\| \approx \|(68.7 \times 10^{9}) \times (68.7 \times 10^9) \times 18\|$, and at 32 bits per matrix element, thats around $3.4 \times 10^{14}$ GB to store it in RAM! 
 
-Rather than dealing with all of that, model-free algorithms directly estimate the optimal policy or value function through algorithms such as policy iteration or value iteration. This is much more computationally efficient. However, I should note that, if possible, obtaining and using a good approximation of the underlying model of the environment can only be beneficial. Be wary- using a bad approximation of a model of the environment will only bring misery. On the other hand, model-free methods require a larger number of training examples.
+Rather than dealing with all of that, model-free algorithms directly estimate the optimal policy or value function through algorithms such as policy iteration or value iteration. This is much more computationally efficient. I should note that, if possible, obtaining and using a good approximation of the underlying model of the environment can only be beneficial. Be wary- using a bad approximation of a model of the environment will only bring you misery. Just as well, model-free methods generally require a larger number of training examples.
 
 ## The Meat and Potatoes of DDPG
 
-At its core, DDPG is a policy gradient algorithm that uses a stochastic behavior policy for good exploration but estimates a **deterministic** target policy, which is much easier to learn. Policy gradient algorithms utilize a form of policy iteration in a sense: they evaluate the policy, and then follow the policy gradient to maximize performance. Since DDPG is off-policy and uses a deterministic target policy, this allows for the use of the Deterministic Policy Gradient theorem (which will be derived shortly). DDPG is an actor-critic algorithm as well; it primarily uses two neural networks, one for the actor and one for the critic. These networks compute action predictions for the current state and generate a temporal-difference (TD) error signal each time step. The input of the actor network is the current state, and the output is a single real value representing an action chosen from a **continuous** action space (whoa!). The critic's output is simply the estimated Q-value of the current state and of the action given by the actor. The deterministic policy gradient theorem provides the update rule for the weights of the actor network. The critic network is updated from the gradients obtained from the TD error signal. 
+At its core, DDPG is a policy gradient algorithm that uses a stochastic behavior policy for good exploration but estimates a **deterministic** target policy, which is much easier to learn. Policy gradient algorithms utilize a form of policy iteration: they evaluate the policy, and then follow the policy gradient to maximize performance. Since DDPG is off-policy and uses a deterministic target policy, this allows for the use of the Deterministic Policy Gradient theorem (which will be derived shortly). DDPG is an actor-critic algorithm as well; it primarily uses two neural networks, one for the actor and one for the critic. These networks compute action predictions for the current state and generate a temporal-difference (TD) error signal each time step. The input of the actor network is the current state, and the output is a single real value representing an action chosen from a **continuous** action space (whoa!). The critic's output is simply the estimated Q-value of the current state and of the action given by the actor. The deterministic policy gradient theorem provides the update rule for the weights of the actor network. The critic network is updated from the gradients obtained from the TD error signal. 
 
-Sadly, it turns out that a vanilla actor-critic algorithm that is off-policy and model-free tends to behave poorly, resisting all of the most valiant efforts to get it to converge. The following are most likely some of the key conspirators: 
+Sadly, it turns out that a vanilla, deep actor-critic algorithm that is off-policy and model-free tends to behave poorly, resisting all of the most valiant efforts to get it to converge. The following are most likely some of the key conspirators: 
 
-1. In general, training and evaluating your policy and/or value function with thousands of temporally-correlated simulated trajectories leads to the introduction of enormous amounts of variance in your approximation of the true Q-function. The TD error signal is excellent at compounding the variance introduced by your bad predictions over time. It is highly suggested to use a replay buffer to store the **experiences** of the agent during training, and then randomly sample transitions to use for learning in order to break up the temporal correlation between training episodes. This technique is known as **experience replay**. DDPG uses this. 
+1. In general, training and evaluating your policy and/or value function with thousands of temporally-correlated simulated trajectories leads to the introduction of enormous amounts of variance in your approximation of the true Q-function (the critic). The TD error signal is excellent at compounding the variance introduced by your bad predictions over time. It is highly suggested to use a replay buffer to store the **experiences** of the agent during training, and then randomly sample experiences to use for learning in order to break up the temporal correlations within different training episodes. This technique is known as **experience replay**. DDPG uses this. 
 
-2. Directly updating your actor and critic neural network weights with the gradients obtained from a TD error signal that was computed from your replay buffer and the output of the actor and critic networks causes your learning algorithm to diverge (or to not learn at all). It was recently discovered that using a set of **target networks** to generate the **targets** for your TD error computation regularizes your learning algorithm and increases stability. Accordingly:
+2. Directly updating your actor and critic neural network weights with the gradients obtained from the TD error signal that was computed from both your replay buffer and the output of the actor and critic networks causes your learning algorithm to diverge (or to not learn at all). It was recently discovered that using a set of **target networks** to generate the **targets** for your TD error computation regularizes your learning algorithm and increases stability. Accordingly, here are the equations for the TD target $y_i$ and the loss function for the critic network:
 
 $$
 \begin{equation}
@@ -88,11 +86,11 @@ L = \frac{1}{N} \sum_{i} (y_i - Q(s_i, a_i | \theta^{Q})^2)
 \end{equation}
 $$
 
-Here, a minibatch of size $N$ has been sampled from the replay buffer, with the $i$ index referring to the i'th sample.  The target for the TD error computation, $y_i$, is computed from the immediate reward and the target actor and critic networks, with weights $\theta^{\mu'}$ and $\theta^{Q'}$ respectively. Then, the critic loss can be computed w.r.t. the output of the critic network for the i'th sample, which is $Q(s_i, a_i \| \theta^{Q})$. 
+Here, a minibatch of size $N$ has been sampled from the replay buffer, with the $i$ index referring to the i'th sample.  The target for the TD error computation, $y_i$, is computed from the sum of the immediate reward and the outputs of the target actor and critic networks, having weights $\theta^{\mu'}$ and $\theta^{Q'}$ respectively. Then, the critic loss can be computed w.r.t. the output $Q(s_i, a_i \| \theta^{Q})$ of the critic network for the i'th sample. 
 
 See <a href="#References">[4]</a> for more details on the use of target networks.
 
-Now, as mentioned above, the weights of the critic neural network can be updated with the gradients derived from the loss function (2). And, remember, the actor network is updated with the Deterministic Policy Gradient. Here lies the crux of DDPG! Silver, et al., <a href="#References">[3]</a> proved that the _policy gradient_, which is the gradient of the policy's performance, is equivalent to the deterministic policy gradient: 
+Now, as mentioned above, the weights of the critic network can be updated with the gradients obtained from the loss function in Eq. 2. Also, remember that the actor network is updated with the Deterministic Policy Gradient. Here lies the crux of DDPG! Silver, et al., <a href="#References">[3]</a> proved that the stochastic _policy gradient_ $\nabla_{\theta} \mu (a \| s, \theta)$, which is the gradient of the policy's performance, is equivalent to the deterministic policy gradient, which is given by: 
 
 $$
 \begin{equation}
@@ -101,7 +99,7 @@ $$
 \end{equation}
 $$ 
 
-It turns out that all you need is the gradient of the output of the critic network w.r.t. its parameters, multiplied by the gradient of the output of the actor network w.r.t. its parameters, averaged over a minibatch. Simple!
+Notice that the policy term in the expectation is not a distribution over actions. It turns out that all you need is the gradient of the output of the critic network w.r.t. its parameters, multiplied by the gradient of the output of the actor network w.r.t. its parameters, averaged over a minibatch. Simple!
 
 **If you would like to move on to the code, feel free to <a href="#Tensorflow">skip ahead</a> here.** Since I think the proof of the deterministic policy gradient theorem is quite illuminating, I'd like to demonstrate it here before moving on to the code.
 
@@ -143,7 +141,7 @@ $$
 $$
 </div>
 
-The right-hand side of Eq. 6 is exactly what we want. In <a href="#References">[3]</a>, it is shown that the stochastic policy gradient converges to Eq. 4 in the limit as the variance of the stochastic policy gradient approaches 0. This is significant because it allows all of the machinery for stochastic policy gradients to be applied to deterministic policy gradients. I don't talk about the stochastic policy gradient theorem in this post for the sake of brevity, but it is covered in <a href="#References">[3]</a>. 
+The right-hand side of Eq. 6 is exactly what we want. In <a href="#References">[3]</a>, it is shown that the stochastic policy gradient converges to Eq. 4 in the limit as the variance of the stochastic policy gradient approaches 0. This is significant because it allows all of the machinery for stochastic policy gradients to be applied to deterministic policy gradients. I don't show or derive the stochastic policy gradient theorem in this post for the sake of brevity, but it is covered in <a href="#References">[3]</a>. 
 
 <a name="Tensorflow"></a> 
 
