BLOG: Clarification in proof

--- a/_posts/blog_posts/2016-08-21-ddpg-rl.md
+++ b/_posts/blog_posts/2016-08-21-ddpg-rl.md
@@ -141,7 +141,7 @@ $$
 $$
 </div>
 
-The right-hand side of Eq. 6 is exactly what we want. In <a href="#References">[3]</a>, it is shown that the stochastic policy gradient converges to Eq. 4 in the limit as the variance of the stochastic policy gradient approaches 0. This is significant because it allows all of the machinery for stochastic policy gradients to be applied to deterministic policy gradients. I don't show or derive the stochastic policy gradient theorem in this post for the sake of brevity, but it is covered in <a href="#References">[3]</a>. 
+The expectation in the right-hand side of Eq. 6 is exactly what we want. In <a href="#References">[3]</a>, it is shown that the stochastic policy gradient converges to Eq. 4 in the limit as the variance of the stochastic policy gradient approaches 0. This is significant because it allows all of the machinery for stochastic policy gradients to be applied to deterministic policy gradients. I don't show or derive the stochastic policy gradient theorem in this post for the sake of brevity, but it is covered in <a href="#References">[3]</a>. 
 
 <a name="Tensorflow"></a> 
 
