BLOG: Updated Github repo link

--- a/_posts/blog_posts/2016-08-21-ddpg-rl.md
+++ b/_posts/blog_posts/2016-08-21-ddpg-rl.md
@@ -242,7 +242,7 @@ I would suggest placing these two functions in separate Actor and Critic classes
 
 Notice that the critic network takes both the state and the action as inputs; however, the action input skips the first layer. This is a design decision that has experimentally worked well. Accommodating this with tflearn was a bit tricky.
 
-Make sure to use Tensorflow placeholders, created by ```tflean.input_data```, for the inputs. Leaving the first dimension of the placeholders as ```None``` allows you to train on batches of experiences.
+Make sure to use Tensorflow placeholders, created by ```tflearn.input_data```, for the inputs. Leaving the first dimension of the placeholders as ```None``` allows you to train on batches of experiences.
 
 You can simply call these creation methods twice, once to create the actor and critic networks that will be used for training, and again to create your target actor and critic networks. 
 
@@ -410,7 +410,7 @@ with tf.Session() as sess:
 
 {% endhighlight %}
 
-You'll want to add book-keeping to the code and arrange things a little more neatly- you can see the full code [here](https://gist.github.com/pemami4911/27a6b38a8a161adeaca0cc7ec1363480).
+You'll want to add book-keeping to the code and arrange things a little more neatly- you can find the full code [here](https://github.com/pemami4911/deep-rl/tree/master/ddpg).
 
 I used Tensorboard to view the total reward per episode and average max Q.
 Tensorflow is a bit low-level, so it's definitely recommended to use tools like tflearn, keras, Tensorboard, etc., on top of it. I am quite pleased with TF though; it's no surprise that it got so popular so quickly. 
